# 02-03

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  GNUmakefile  Makefile  init.sh  run.sh
include/glad/: gl.h
src/: gl.c  main.c
